Cleaned up zoom issue on iOS. Added proper link mouse icon for links.

--- a/index.css
+++ b/index.css
@@ -3,14 +3,6 @@
 }
 .item, .itemdetails, .cartitems, .cartitem, .cartfooter, .iteminput, .itemform {box-sizing: border-box;}
 .link {text-decoration: none; color: #333333;}
-.remove-comment {
-  background: none;
-  border: 0;
-  line-height: 1;
-  font-size: 20px;
-  margin-left: 1em;
-  color: lightgrey;
-}
 
 /*********************************/
 /* DO NOT PASTE CUSTOM CSS BELOW */
@@ -29,7 +21,7 @@ body {
   top: 108px;
   right: 0px;
   bottom: 200px;
-  z-index: 5000;
+  z-index: 1000;
   display: block;
   overflow: scroll;
   width: 300px;
@@ -43,7 +35,7 @@ body {
   position: fixed;
   right: 0px;
   bottom: 0px;
-  z-index: 5000;
+  z-index: 1000;
   width: 300px;
   height: 200px;
   padding: 10px;
@@ -129,7 +121,7 @@ body {
 
 .navbar {
   position: fixed;
-  z-index: 10000;
+  z-index: 1000;
   width: 100%;
   background-color: #3f0000;
 }
@@ -223,6 +215,7 @@ body {
   width: 25px;
   height: 25px;
   margin: 10px;
+  cursor: pointer;
 }
 
 .success {
@@ -304,6 +297,13 @@ body {
   width: 100%;
   padding: 10px;
   border-top: 1px solid #ddd;
+}
+
+.removeitem {
+  margin-left: 1em;
+  color: #d3d3d3;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 @media (max-width: 767px) {
